--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -3,6 +3,7 @@
     "rust-lang.rust-analyzer",
     "vadimcn.vscode-lldb",
     "usernamehw.errorlens",
-    "tamasfe.even-better-toml"
+    "tamasfe.even-better-toml",
+    "fill-labs.dependi"
   ]
 }
