--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+glam = "0.29.2"
 itertools = "0.13.0"
 lazy-regex = "3.1.0"
 num = "0.4.1"
