--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,4 +11,5 @@ itertools = "0.13.0"
 lazy-regex = "3.4.1"
 num = "0.4.1"
 phf = { version = "0.11.2", features = ["macros"] }
+rand = "0.8.5"
 rstest = "0.23.0"
